--- a/panda.html
+++ b/panda.html
@@ -32,6 +32,15 @@
               </div>
             </div>
           </nav>
+
+
+
+
+
+
+
+
+
           <section>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <ol class="carousel-indicators">
@@ -41,12 +50,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="row">
-                          <div class="col-md-7 d-flex align-items-center">
+                      <div class="row d-flex align-items-center p-5">
+                          <div class="col-md-7 ">
                               <div>
                               <h1>Mega LCD TV For Sports</h1>
                               <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                               <h1>$1200</h1>
+                              <button class="btn btn bg-info">About</button>
                             </div>
                           </div>
                           <div class="col-md-5">
@@ -56,12 +66,13 @@
                    
                   </div>
                   <div class="carousel-item">
-                      <div class="row">
-                          <div class="col-md-7 d-flex align-items-center">
+                      <div class="row d-flex align-items-center p-5">
+                          <div class="col-md-7 ">
                           <div>
                               <h1>Cool Dude Headphone</h1>
                               <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                               <h1>$500</h1>
+                              <button class="btn btn bg-info">About</button>
                             </div>
                           </div>
                           <div class="col-md-5 ">
@@ -71,12 +82,13 @@
                     
                   </div>
                   <div class="carousel-item">
-                      <div class="row">
-                          <div class="col-md-7 d-flex align-items-center">
+                      <div class="row d-flex align-items-center p-5">
+                          <div class="col-md-7 ">
                               <div>
                               <h1>X-Box  for your living room</h1>
                               <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                               <h1>$900</h1>
+                              <button class="btn btn bg-info">About</button>
                             </div>
                           </div>
                           <div class="col-md-5">
