--- a/panda.html
+++ b/panda.html
@@ -19,11 +19,7 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
-                  </li>
-                  <li class="nav-item">
+                  
                     <a class="nav-link" href="#">Bages</a>
                   </li>
                   <li class="nav-item">
@@ -137,7 +133,7 @@
 
 
 
-        <section class="mt-5">
+        <section class="mt-5" id="shoeid">
             <h2>Shoes</h2>
         <div class=" row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
