--- a/panda.html
+++ b/panda.html
@@ -248,7 +248,7 @@
     </div>
 </section>
 
-<section style="height: 300px; background: #ffd0d8;" class="m-5 d-flex justify-content-center align-items-center" id="subscribeid">
+<section style="height: 300px; background: #bae7e1;" class="m-5 d-flex justify-content-center align-items-center" id="subscribeid">
     <div>
     <h1>Stay With us and do subscribe</h1>
     <h4>get update on sels, offer and more information</h4>
