--- a/panda.html
+++ b/panda.html
@@ -47,8 +47,8 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <div class="row d-flex align-items-center p-5">
-                          <div class="col-md-7 ">
+                      <div  class="row d-flex align-items-center p-5">
+                          <div" class="col-md-7 ">
                               <div>
                               <h1>Mega LCD TV For Sports</h1>
                               <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
@@ -116,6 +116,7 @@
          elit. Beatae commodi doloribus vel, ullam blanditiis
          qui vero rerum assumenda veniam velit voluptatibus!
          Vel et iste quia iusto culpa asperiores minima atque?</p>
+         <button class="btn btn-primary">Downlode cv</button>
       </div>
 
       <div class="col-lg-5 col-10">
