--- a/panda.html
+++ b/panda.html
@@ -48,7 +48,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                       <div  class="row d-flex align-items-center p-5">
-                          <div" class="col-md-7 ">
+                          <div class="col-md-7 ">
                               <div>
                               <h1>Mega LCD TV For Sports</h1>
                               <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
