--- a/panda.html
+++ b/panda.html
@@ -137,19 +137,19 @@
               <div class="col">
                <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around">
                 <h1> watch</h1>
-                <img src="images/categories/watch.png" alt="">
+                <img style="width: 80px;" src="images/categories/watch.png" alt="">
                 </div>
               </div>
               <div class="col">
                 <div class="p-3 rounded bg-success d-flex align-items-center justify-content-around">
                     <h1> bag</h1>
-                    <img src="images/categories/bag.png" alt="">
+                    <img style="width: 80px;" src="images/categories/bag.png" alt="">
                 </div>
               </div>
               <div class="col">
                 <div class="p-3 rounded bg-primary d-flex align-items-center justify-content-around">
                     <h1> shoes</h1>
-                    <img src="images/categories/shoes.png" alt="">
+                    <img style="width: 80px;" src="images/categories/shoes.png" alt="">
                 </div>
               </div>
             </div>
